# MusicFreePluginsHub

./: .gitignore  README.md  extras.json  package.json  plugins.json  pyproject.toml  requirements.in  subscriptions.json  worker.py
.github/actions/setup-python/: action.yml
.github/workflows/: Schedule.yml
src/: __init__.py  js.py  main.py  utils.py
src/data/: origins.json
worker/: 0.json  1.json  2.json
