[project]
name = "MusicFreePluginsHub"
version = "0.2.0"
description = "MusicFree 插件订阅聚合器 - 订阅全网"
authors = [
    { name = "xxnuo", email = "pip@2020818.xyz" },
    { name = "GuGuMur", email = "2221533105@qq.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.13.7"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "packaging>=24.2",
    "pythonmonkey>=1.1.0",
    "ujson>=5.10.0",
]
